scribble-cli/src/test/resources/good/safety/stuckmsg/twoparty/Test02.scr
module good.safety.stuckmsg.twoparty.Test02;


global protocol Proto1(role A, role B)
{
	choice at A
	{
		1() from A to B;
	}
	or
	{
		1() from A to B;
	}
}

