scribble-cli/src/test/resources/bad/safety/orphan/threeparty/Test01a.scr
module bad.safety.orphan.threeparty.Test01a;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		1() from A to B;
		2() from B to C;
	}
	or
	{
		1() from A to B;
		2() from B to C;
		3() from B to C;  // Also wait-for
	}
}


